@@ -1,6 +1,7 @@
 package org.jabref.gui.libraryproperties.constants;
 
 import java.util.Comparator;
+import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -86,9 +87,12 @@ public class ConstantsPropertiesViewModel implements PropertiesTabViewModel {
 
     @Override
     public void storeSettings() {
-        databaseContext.getDatabase().setStrings(stringsListProperty.stream()
-                                                                    .map(this::fromBibtexStringViewModel)
-                                                                    .collect(Collectors.toList()));
+        List<BibtexString> strings = stringsListProperty.stream()
+                .map(this::fromBibtexStringViewModel)
+                .toList();
+        strings.forEach(string -> string.setParsedSerialization("@String{" +
+                string.getName() + " = " + string.getContent() + "}\n"));
+        databaseContext.getDatabase().setStrings(strings);
     }
 
     private BibtexString fromBibtexStringViewModel(ConstantsItemModel viewModel) {
